[tool.poetry]
name = "anverallig-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "anverallig_test"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-telegram-bot = "^21.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
